@@ -47,6 +47,12 @@ Support for the old ipc interface, MACH_IPC_COMPAT, was removed on 2006-12-03.
 Support for building without CONTINUATIONS was removed on 2006-12-03.
 <http://savannah.gnu.org/patch/?5019>.
 
+Support for FP emulation was removed on 2006-12-13.
+http://lists.gnu.org/archive/html/bug-hurd/2006-12/msg00031.html
+
+Support for Olivetti XP7 & XP9 was removed on 2007-01-02.
+http://lists.gnu.org/archive/html/bug-hurd/2006-12/msg00107.html
+
 
 Be sure to check the ChangeLog and have a look at the repository at that
 tag's state if you want to work on those parts of GNU Mach.
